--- a/bechelors.html
+++ b/bechelors.html
@@ -122,6 +122,7 @@
                 <li><a href="diploma.html">Diploma</a></li>
                 <li><a href="shortcourse.html">Short Course</a></li>
                 <li><a href="workshop.html">Workshop</a></li>
+                <li><a href="islamic.html">Islamic</a></li>
                 <li><a href="traning.html">Traning</a></li>
             </ul>
         </div>
